--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -8,6 +8,20 @@
   <% if @post_image.user_id == current_user.id %>
     <%= link_to "削除", post_image_path(@post_image.id), method: :delete %>
   <% end %>
+
+  <% if @post_image.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_image_favorite_path(@post_image), method: :delete do %>
+        ♥<%= @post_image.favorites.count %>いいね
+      <% end %>
+    </p>
+  <% else %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+        ♡<%= @post_image.favorites.count %>いいね
+      <% end %>
+    </p>
+  <% end %>
 </div>
 
 <div>
@@ -22,6 +36,7 @@
       <%= link_to "削除", post_image_postcomment_path(postcomment.post_image.id, postcomment.id), method: :delete %>
     </div>
     <% end %>
+    
   <% end %>
 </div>
 
